# ft_turing

./: Makefile  README.md  dune-project  dune_encode  dune_gen  ft_turing.opam  planning_implémentation.md  test_dedicated_vs_universal.sh  test_metamachine.sh
data/machines/: 0_2n.json  0n1n.json  metamachine.json  palindrome.json  unary_add.json  unary_add_dedicated.json  unary_sub.json
src/: dune  encode_add_machine.ml  encode_unary_add_simple.ml  encode_unary_add_universal.ml  machine.ml  main.ml  metamachine_generator.ml  parser.ml  simulator.ml  tape.ml
